css/about.scss
@import 'variables';

#about {
  background: $about-grey;
  color: $white;
  h2 {
    @include sectionH2;
  }
}

.who-am-i-section {
  padding-bottom: 40px;
  p {
    padding: 10px 15px 20px 15px;
    max-width: 630px;
    a {
      font-weight: 700;
      color: #1f4352;
      text-decoration: none;
    }
  }
}

.skills-section {
  padding-bottom: 20px;
  background: $skills-grey;
}

.skills-block {
  display: flex;
  max-width: 300px;
  height: 125px;
  margin: 10px auto;
  align-items: center;
  justify-content: center;
  h4 {
    font-size: 1.2em;
    padding: 5px 0 15px 0;
  }
  .inner-skills {
    width: 50%;
    height: 100px;
    padding-left: 25px;
  }
}

.skill-image {
  width: 80px;
}


/*MEDIA QUERIES*/
@media screen and (min-width: 568px) {
  .skills-wrapper {
    display: flex;
    flex-wrap: wrap;
  }
  .skills-block {
    width: 50%;
    text-align: center;
  }
  .inner-skills {
    padding-left: 8px;
    text-align: left;
  }
}
@media screen and (min-width: 680px) {
  .who-am-i-section {
    p {
      display: inline-block;
      width: 47%;
      padding: 10px 0 20px 18px;
      vertical-align: top;
    }
  }
  .skills-block {
    max-width: 425px;
  }
  .skill-image {
    width: 100px;
  }
}
@media screen and (min-width: 960px) {
  .who-am-i-section {
    text-align: center;
    p {
      text-align: left;
    }
  }
  .skills-wrapper {
    max-width: 945px;
    margin: 0 auto;
    text-align: center;
  }
}

